Put sign out and admin menu items below a user profile dropdown
Initially to give us more room as admins but it's nice to also get
things off the menu now it's got another item.

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -26,26 +26,24 @@
           = link_to "https://help.morph.io/", target: "_blank" do
             %span.glyphicon.glyphicon-new-window{"aria-hidden" => "true"}
             Help forum
-        - if user_signed_in? && current_user.admin?
-          %li(class="dropdown hidden-sm")
-            %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
-              Admin
-              %b(class="caret")
-            %ul(class="dropdown-menu")
-              %li= link_to "Dashboard", admin_dashboard_path
-              %li= link_to "Running scrapers", running_scrapers_path
 
       %ul.nav.navbar-nav.navbar-right
         %li
           - if user_signed_in?
-            = link_to current_user do
-              = owner_image(current_user, 20, false)
-              = current_user.nickname
+            %li(class="dropdown hidden-sm")
+              %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
+                = owner_image(current_user, 20, false)
+                = current_user.nickname
+                %b(class="caret")
+              %ul(class="dropdown-menu")
+                %li= link_to "Your profile", current_user
+                %li= link_to "Sign out", destroy_user_session_path
+                - if current_user.admin?
+                  %li(class="divider")
+                  %li= link_to "Admin dashboard", admin_dashboard_path
+                  %li= link_to "Running scrapers", running_scrapers_path
           - else
             = link_to "Sign in with GitHub", user_omniauth_authorize_path(:github)
-        %li
-          - if user_signed_in?
-            = link_to "Sign out", destroy_user_session_path
 
       = form_tag search_path, method: "get", role: "search", class: "navbar-form navbar-right" do
         .input-group
