Don't set a max height on the menu

--- a/app/assets/stylesheets/global/_site-header.scss
+++ b/app/assets/stylesheets/global/_site-header.scss
@@ -6,10 +6,9 @@
   }
 }
 
-// override bootstrap default height, which
-// is too short for our content.
+// Override bootstrap maximum menu height so it doesn't scoll
 .navbar-fixed-top .navbar-collapse {
-  max-height: 420px;
+  max-height: none;
 }
 
 .help .glyphicon-new-window {
