--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -48,7 +48,9 @@
       .col-md-6.col-md-offset-3.text-center
         %h3 What is priority technical support?
         %p
-          Post any question you have to the forum and we guarantee a response within
+          Post any question you have to the
+          = link_to "help forum", "https://help.morph.io/"
+          and we guarantee a response within
           two working days. You'll also get up to two hours personal assistance per
           month for scraper help, bugfixes, or feature development on morph.io.
 
