--- a/app/views/documentation/nodejs.html.haml
+++ b/app/views/documentation/nodejs.html.haml
@@ -1,8 +1,6 @@
 %h1= language_name_with_icon(:nodejs, size: "30x30")
 
-.alert.alert-warning
-  %i.fa.fa-bell-o.fa-lg.pull-left
-  Missing documentation. Help out by writing some.
+= render "missing_documentation"
 
 .row
   .col-sm-9
