Add placeholder sections to PhantomJS documentation

--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -7,3 +7,9 @@
   This could be because the web site is poorly programmed or because it makes extensive use of JavaScript.
 
   You can do this with [PhantomJS](http://phantomjs.org/) on morph.io. It is essentially a headless browser that you can control from your scraper using JavaScript or a wrapper library.
+
+  ### Using
+  #{render "missing_documentation"}
+
+  ### Examples
+  #{render "missing_documentation"}
