Add an introduction to the PhantomJS page

--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -1,3 +1,9 @@
 - content_for :title, "Using PhantomJS"
 :markdown
   ## PhantomJS
+
+  In most circumstances web scraping is done by downloading a web page using your programming language and a library.
+  However in some cases you need to simulate a web browser.
+  This could be because the web site is poorly programmed or because it makes extensive use of JavaScript.
+
+  You can do this with [PhantomJS](http://phantomjs.org/) on morph.io. It is essentially a headless browser that you can control from your scraper using JavaScript or a wrapper library.
