--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -9,7 +9,7 @@
   You can do this with [PhantomJS](http://phantomjs.org/) on morph.io. It is essentially a headless browser that you can control from your scraper using JavaScript or a wrapper library.
 
   ### Using
-  #{render "missing_documentation"}
+  #{render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"}
 
   ### Examples
   #{render "missing_documentation"}
