--- a/app/views/documentation/secret_values.html.haml
+++ b/app/views/documentation/secret_values.html.haml
@@ -45,15 +45,6 @@
 
 = render "language_tabs", id_prefix: 'reading', path: 'documentation/reading_secret_values'
 
-:markdown
-  ### Examples
-  Sometimes there's nothing like seeing a real-life example. Here are some
-  scrapers that use secret values. If you have a scraper you would like to add
-  to this list, please #{mail_to "contact@oaf.org.au", "let us know"}.
-
-- if Scraper.find_by(full_name: 'maxious/cat_photos')
-  = render Scraper.find_by(full_name: 'maxious/cat_photos')
-- if Scraper.find_by(full_name: 'philipnye/free-school-ofsted-ratings-output-test')
-  = render Scraper.find_by(full_name: 'philipnye/free-school-ofsted-ratings-output-test')
-- if Scraper.find_by(full_name: 'mlandauer/australian_food_products')
-  = render Scraper.find_by(full_name: 'mlandauer/australian_food_products')
+= render "examples", full_names: ["maxious/cat_photos",
+                                  "philipnye/free-school-ofsted-ratings-output-test",
+                                  "mlandauer/australian_food_products"]
