Switch to HAML. Not much advantage to using Markdown here

--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -8,8 +8,8 @@
 
   You can do this with [PhantomJS](http://phantomjs.org/) on morph.io. It is essentially a headless browser that you can control from your scraper using JavaScript or a wrapper library.
 
-  ### Using
-  #{render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"}
+%h3 Using
+= render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"
 
-  ### Examples
-  #{render "missing_documentation"}
+%h3 Examples
+= render "missing_documentation"
