Add PhantomJS example scrapers I know about

--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -11,5 +11,5 @@
 %h3 Using
 = render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"
 
-%h3 Examples
-= render "missing_documentation"
+= render "examples", full_names: ["tmtmtmtm/cabo-verde-assembleia-nacionale",
+                                  "tmtmtmtm/angola-national-assembly"]
