Use double quotes by default

--- a/app/views/documentation/phantomjs/_ruby.html.haml
+++ b/app/views/documentation/phantomjs/_ruby.html.haml
@@ -10,7 +10,7 @@
   Then in your scraper start a Capybara session using Poltergeist:
 :coderay
   #!ruby
-  require 'capybara/poltergeist'
+  require "capybara/poltergeist"
 
   capybara = Capybara::Session.new(:poltergeist)
   # Start scraping
