--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -8,7 +8,7 @@
 
   You can do this with [PhantomJS](http://phantomjs.org/) on morph.io. It is essentially a headless browser that you can control from your scraper using JavaScript or a wrapper library.
 
-%h3 Using
+%h3 Usage
 = render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"
 
 = render "examples", full_names: ["tmtmtmtm/cabo-verde-assembleia-nacionale",
