Add the simple example PhantomJS scraper I wrote to the example list
I'm adding it first because it's quite a simple example whereas the
others are a little more advanced.

--- a/app/views/documentation/phantomjs.html.haml
+++ b/app/views/documentation/phantomjs.html.haml
@@ -11,5 +11,6 @@
 %h3 Usage
 = render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"
 
-= render "examples", full_names: ["tmtmtmtm/cabo-verde-assembleia-nacionale",
+= render "examples", full_names: ["openaustralia/example_ruby_phantomjs_scraper",
+                                  "tmtmtmtm/cabo-verde-assembleia-nacionale",
                                   "tmtmtmtm/angola-national-assembly"]
