--- a/app/views/documentation/_format.html.haml
+++ b/app/views/documentation/_format.html.haml
@@ -4,3 +4,7 @@
   How your scraper does that and what tables or fields you include is entirely up to you.
   If there's a table called <code>#{Morph::Database.sqlite_table_name}</code>
   then we'll show that on your scraper page first.
+
+%p Here's how you can do this in your programming language:
+
+= render "language_tabs", id_prefix: "storing_data", path: "documentation/storing_data"
