--- a/app/views/documentation/storing_data/_php.html.haml
+++ b/app/views/documentation/storing_data/_php.html.haml
@@ -1,1 +1,10 @@
-= render "missing_documentation"
+:markdown
+  The `scraperwiki` PHP library makes it easy to store data in an SQLite database.
+  When you create a new scraper via morph.io we include a version of the library that writes data to the correct database name in the default Composer file.
+
+  To save data all you need to do is call the [`scraperwiki::save_sqlite` method](https://github.com/openaustralia/scraperwiki-php/tree/morph_defaults#scraperwikisave_sqliteunique_keys-data-table_name).
+  Creating the database and setting up tables is done automagically by the library:
+
+:coderay
+  #!php
+  scraperwiki::save_sqlite(array("name"), array("name" => "susan", "occupation" => "software developer");
