--- a/app/views/documentation/storing_data/_ruby.html.haml
+++ b/app/views/documentation/storing_data/_ruby.html.haml
@@ -1,6 +1,7 @@
 :markdown
   The `scraperwiki` Rubygem makes it easy to store data in an SQLite database.
-  When you create a new scraper via morph.io we include a version of the Gem that writes data to the correct database name in the default Gemfile.
+  You need to use the `morph_defaults` branch of [our fork](https://github.com/openaustralia/scraperwiki-ruby/tree/morph_defaults) so that the correct database name is used.
+  When you create a new scraper via morph.io we include this version in the default Gemfile.
 
   To save data all you need to do is call the [`ScraperWiki.save_sqlite` method](https://github.com/openaustralia/scraperwiki-ruby/tree/morph_defaults#scraperwikisave_sqliteunique_keys-data-table_name--dataverbose).
   Creating the database and setting up tables is done automagically by the library:
