Change PhantomJS documentation title to be more user-centred. #803

--- a/app/views/documentation/scraping_javascript_sites.html.haml
+++ b/app/views/documentation/scraping_javascript_sites.html.haml
@@ -1,6 +1,6 @@
-- content_for :title, "Using PhantomJS"
+- content_for :title, "Scraping JavaScript heavy sites"
 :markdown
-  ## PhantomJS
+  ## #{content_for :title}
 
   In most circumstances web scraping is done by downloading a web page using your programming language and a library.
   However in some cases you need to simulate a web browser.
