Make the example code actually output something #803

--- a/app/views/documentation/phantomjs/_ruby.html.haml
+++ b/app/views/documentation/phantomjs/_ruby.html.haml
@@ -15,3 +15,4 @@
   capybara = Capybara::Session.new(:poltergeist)
   # Start scraping
   capybara.visit("https://morph.io/")
+  puts capybara.find("#banner h2").text
