Don't show the data saving examples on the new GitHub scraper page
It's extra info you probably don't need here.

Before this commit the page wasn't working because it couldn't work
out the template paths!

--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -2,7 +2,7 @@
   %h1 Add scraper from your Github repository
 
   = render 'documentation/languages'
-  = render 'documentation/format'
+  = render 'documentation/format_intro'
 
   %ul.nav.nav-tabs
     %li.active= link_to current_user.nickname, "#owner_#{current_user.nickname}", data: {toggle: "tab"}
