Consistently use correct capitalisation of GitHub name

--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -1,5 +1,5 @@
 .container
-  %h1 Add scraper from your Github repository
+  %h1 Add scraper from your GitHub repository
 
   = render 'documentation/languages'
   = render 'documentation/format_intro'
