Use the meta-tags gem for rendering all our title content

--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -1,6 +1,6 @@
-- content_for :title, "How to use the API"
+- title "How to use the API"
 
-%h1= yield :title
+%h1= title
 
 %p The API allows you to programatically retrieve data from any public scraper using an SQL query. It's all pretty easy.
 
