--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, @scraper.full_name
+- title @scraper.full_name
 - set_meta_tags description: scraper_description(@scraper)
 
 .container
