--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,5 +1,5 @@
 - title @scraper.full_name
-- set_meta_tags description: scraper_description(@scraper)
+- description scraper_description(@scraper)
 
 .container
   = sync partial: "show_partial", resource: @scraper, refetch: true
