Add title to new GitHub scraper page

--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -1,5 +1,7 @@
+- title "Add scraper from your GitHub repository"
+
 .container
-  %h1 Add scraper from your GitHub repository
+  %h1= title
 
   = render 'documentation/languages'
   = render 'documentation/format_intro'
