Add title to all scrapers page

--- a/app/views/scrapers/index.html.haml
+++ b/app/views/scrapers/index.html.haml
@@ -1,5 +1,7 @@
+- title "All Scrapers"
+
 .container
-  %h1 All Scrapers
+  %h1= title
 
   = paginate @scrapers
   = render partial: "sync/scrapers/scraper", collection: @scrapers
