--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -20,6 +20,9 @@
 						= link_to "Source code", "https://github.com/openaustralia/morph"
 						%i.fa.fa-github-alt
 					%li
+						= link_to 'Help forum', "https://help.morph.io/", target: "_blank"
+						%i.fa.fa-question-circle
+					%li
 						= link_to "https://github.com/openaustralia/morph/issues?state=open", target: "_blank" do
 							Suggest a
 							%strong feature
