--- a/app/views/layouts/documentation.html.haml
+++ b/app/views/layouts/documentation.html.haml
@@ -12,6 +12,7 @@
           = bs_nav_link language_name_with_icon(:perl, size: "20x20"), perl_documentation_index_path
           = bs_nav_link language_name_with_icon(:python, size: "20x20"), python_documentation_index_path
           = bs_nav_link language_name_with_icon(:nodejs, size: "20x20"), nodejs_documentation_index_path
+          = bs_nav_link 'Using any library in your scraper', libraries_documentation_index_path
           = bs_nav_link 'Secret values', secret_values_documentation_index_path
           = bs_nav_link "Scraping JavaScript heavy sites", scraping_javascript_sites_documentation_index_path
           = bs_nav_link "How to use the API", api_documentation_index_path
