Template for language examples

--- a/app/views/documentation/libraries.html.haml
+++ b/app/views/documentation/libraries.html.haml
@@ -15,3 +15,5 @@
   this will be even simpler for you, as morph.io's system for libraries is built
   on top of [Buildpacks](https://devcenter.heroku.com/articles/buildpacks),
   the same technology that drives the installation of libraries on Heroku.
+
+= render "language_tabs", id_prefix: "libraries", path: "documentation/libraries2"
