On the getting started page link to the page on installing libraries

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -34,7 +34,7 @@
 
 .row
   .col-sm-9
-    %h3.section#libraries Libraries and language versions
+    %h3.section#libraries Using any library in your scraper
     :markdown
       #{render "libraries.md"}
   .col-sm-3
