--- a/app/views/documentation/libraries.html.haml
+++ b/app/views/documentation/libraries.html.haml
@@ -1,4 +1,5 @@
-%h1 How to use any library in your scraper
+- title 'How to use any library in your scraper'
+%h1= title
 
 :markdown
   You can use any libraries you want with your scraper. This makes things incredibly
