--- a/app/views/documentation/language_version/_php.html.haml
+++ b/app/views/documentation/language_version/_php.html.haml
@@ -1,1 +1,9 @@
-= render "missing_documentation"
+:markdown
+  To set the version of PHP you want to use and to install PHP extensions and libraries
+  create `composer.json` in your scraper repository.
+
+  For instance, to use PHP 5.5.12 your `composer.json` could look like this
+
+  #{ render 'documentation/libraries2/php_example2.html.haml' }
+
+  There are currently a limited number of PHP versions that are supported. See the [list at Heroku PHP support](https://devcenter.heroku.com/articles/php-support#supported-versions).
