--- a/app/views/documentation/libraries.html.haml
+++ b/app/views/documentation/libraries.html.haml
@@ -17,4 +17,4 @@
   on top of [Buildpacks](https://devcenter.heroku.com/articles/buildpacks),
   the same technology that drives the installation of libraries on Heroku.
 
-= render "language_tabs", id_prefix: "libraries", path: "documentation/libraries2"
+= render "language_tabs", id_prefix: "libraries", path: "documentation/libraries"
