--- a/app/views/users/_sign_in_message.html.haml
+++ b/app/views/users/_sign_in_message.html.haml
@@ -1,4 +1,6 @@
 - if @sign_up
-  Welcome to morph.io! You're now watching any scrapers you have access to.
+  Welcome to morph.io! You're
+  = link_to "now watching", watching_user_path(@user)
+  any scrapers you have access to.
 - else
   Nice person you are. Welcome!
