Link to install language for ruby and python

--- a/app/views/documentation/run_locally/_python.html.haml
+++ b/app/views/documentation/run_locally/_python.html.haml
@@ -1,21 +1,23 @@
 :markdown
-  1. Install `virtualenv` and `pip` for package management, and `BeautifulSoup4` for HTML parsing:
+  1. [Install Python](https://www.python.org/downloads/)
+
+  2. Install `virtualenv` and `pip` for package management, and `BeautifulSoup4` for HTML parsing:
   <pre>sudo apt-get install python-pip python-bs4 python-dev python-virtualenv</pre>
 
-  2. Create a `virtualenv` and activate it.
+  3. Create a `virtualenv` and activate it.
   <pre>
   virtualenv --system-site-packages oaf
   source oaf/bin/activate
   </pre>
 
-  3. Fork and clone the scraper you're going to work on:
+  4. Fork and clone the scraper you're going to work on:
   <pre>
   git clone git@github.com:yourname/example.git
   cd example
   </pre>
 
-  4. Use `pip` to install the dependencies:
+  5. Use `pip` to install the dependencies:
   <pre>pip install -r requirements.txt</pre>
 
-  5. Run the scraper locally:
+  6. Run the scraper locally:
   <pre>python scraper.py</pre>
