--- a/app/views/documentation/run_locally/_ruby.html.haml
+++ b/app/views/documentation/run_locally/_ruby.html.haml
@@ -1,10 +1,12 @@
 :markdown
-  1. Install `bundler`: a Ruby package manager you’ll use to install the `scraperwiki` gem.<br>
+  1. [Install Ruby](https://www.ruby-lang.org/en/documentation/installation/)
+
+  2. Install `bundler`: a Ruby package manager you’ll use to install the `scraperwiki` gem.<br>
   Also install the `sqlite` development headers because `scraperwiki` will need them.
   <pre>$ sudo apt-get install bundler libsqlite3-dev</pre>
 
-  2. Fork the repo you want to work on, or [start a new one](https://morph.io/scrapers/new).
-  3. Clone it:
+  3. Fork the repo you want to work on, or [start a new one](https://morph.io/scrapers/new).
+  4. Clone it:
   <pre>
   mkdir oaf
   cd oaf
@@ -12,13 +14,13 @@
   cd example
   </pre>
 
-  3. If there’s no Gemfile, use this simple one:
+  5. If there’s no Gemfile, use this simple one:
   #{render 'documentation/libraries/ruby_example1'}
 
-  4. Use bundler to install these Ruby gems locally:
+  6. Use bundler to install these Ruby gems locally:
   <pre>bundle install --path ../vendor/bundle</pre>
   This will create a file called `Gemfile.lock`.<br>
   Make sure that you add *both* `Gemfile` and `Gemfile.lock` to your repository.
 
-  5. Run the scraper. Use bundler to initialize the environment:
+  7. Run the scraper. Use bundler to initialize the environment:
   <pre>bundle exec ruby scraper.rb</pre>
