Add a link of off the new scraper page to add a scraper from github

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -3,6 +3,13 @@
 .container
   %h1= title
 
+  %p
+    Already have a repository on Github? Then,
+    #{link_to "add the scraper from Github", github_new_scraper_path}.
+  %p
+    It's easier to start here though. We'll create a template scraper for you
+    in your preferred language.
+
   = simple_form_for @scraper do |f|
     .row
       .col-sm-6
