--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -54,14 +54,7 @@
     .list-group= sync partial: "scraper_without_owner", collection: @other_scrapers.sort{|a,b| b.updated_at <=> a.updated_at}
 
   - if @owner == current_user || @owner.organization? && @owner.users.include?(current_user)
-    .btn-group
-      = button_link_to "#", class: "dropdown-toggle", data: {toggle: "dropdown"} do
-        Add Scraper
-        %b.caret
-      %ul.dropdown-menu
-        %li= link_to "New scraper", new_scraper_path
-        %li.divider
-        %li= link_to "Add scraper from GitHub", github_new_scraper_path
+    = button_link_to "New scraper", new_scraper_path
 
   - if @owner.user? && !@owner.other_scrapers_contributed_to.empty?
     %h3
