--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -18,16 +18,21 @@
 
         %ul.list-unstyled
           - unless @owner.company.blank?
-            %li= @owner.company
+            %li
+              %i.fa.fa-users.fa-fw.text-muted
+              = @owner.company
           - unless @owner.location.blank?
-            %li= @owner.location
+            %li
+              %i.fa.fa-map-marker.fa-fw.text-muted
+              = @owner.location
           - unless @owner.blog.blank?
-            %li= link_to @owner.blog, @owner.blog
+            %li
+              %i.fa.fa-link.fa-fw.text-muted
+              = link_to @owner.blog, @owner.blog
         %p
-          = link_to @owner.github_url, target: "_blank" do
-            %i.fa.fa-github-square.fa-lg
-            = @owner.nickname
-            on GitHub
+          %i.fa.fa-github-square.fa-fw.text-muted
+          = link_to "#{@owner.nickname} on GitHub", @owner.github_url, target: "_blank"
+
       .col-md-2.owner-box
         - if signed_in?
           .pull-right= render partial: "watch_button", locals: {owner: @owner}
