Use consistent github icon as in footer

--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -30,7 +30,7 @@
               %i.fa.fa-link.fa-fw.text-muted
               = link_to @owner.blog, @owner.blog
         %p
-          %i.fa.fa-github-square.fa-fw.text-muted
+          %i.fa.fa-github-alt.fa-fw.text-muted
           = link_to "#{@owner.nickname} on GitHub", @owner.github_url, target: "_blank"
 
       .col-md-2.owner-box
