Use d3 lib that's locally installed

--- a/app/views/users/stats.html.haml
+++ b/app/views/users/stats.html.haml
@@ -19,7 +19,7 @@
     shape-rendering: crispEdges;
   }
 
-%script{:src => "https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"}
+= javascript_include_tag "d3.js"
 
 :coffee
   d3.json '/users.json', (error, users) ->
