Make supporter go across screen width on smaller screens

--- a/app/views/static/_featured_supporters.html.haml
+++ b/app/views/static/_featured_supporters.html.haml
@@ -1,7 +1,7 @@
 .row
   - Plan.featured_plans.each do |plan|
     - unless Owner.supporters(plan).empty?
-      .col-xs-6
+      .col-md-6
         %h2
           %small.pre-heading Supporters of morph.io
           = link_to plan.name.pluralize, new_supporter_path
